# whois

./: .gitignore  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  README.md  build.bat  deploy.bat  doxide.yml  mkdocs.yml  purge.bat  sonar-project.properties  test.bat  vcpkg.json
.github/workflows/: build.yml  sonar.yml  test.yml
overrides/: main.html
scripts/: clean_docs.py
skse/plugins/: whois.ini
src/: AppearanceTemplate.cpp  AppearanceTemplate.h  DebugOverlay.cpp  DebugOverlay.h  Hooks.cpp  Hooks.h  Occlusion.cpp  Occlusion.h  PCH.h  ParticleTextures.cpp  ParticleTextures.h  RenderConstants.h  Renderer.cpp  Renderer.h  Settings.cpp  Settings.h  TextEffects.cpp  TextEffects.h  Version.h  main.cpp
tests/: test_settings.cpp  test_utils.cpp
